@@ -2,7 +2,7 @@ package com.barbulescu.codedojo.exercise0003;
 
 public record Shipped(String trackingNumber) implements FulfillmentState {
     public Shipped {
-        if (trackingNumber == null || trackingNumber.trim().isEmpty()) {
+        if (trackingNumber == null || trackingNumber.isBlank()) {
             throw new IllegalArgumentException("trackingNumber must not be blank");
         }
     }
